author and repository on github

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wise-shopping-cart",
   "version": "0.0.1",
   "description": "shopping cart for Wise Hands project",
+  "author": "WiseHands Team",
+  "repository": "WiseHands/GenericShoppingCart",
   "main": "wise-shopping-cart.js",
   "dependencies": {
     "@polymer/iron-ajax": "^3.0.1",
