demo snippet added

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "wct-mocha": "^1.0.1"
+  },
+  "demos": {
+    "Demo": "demo/index.html"
   }
 }
